--- a/app/src/main/res/navigation/inneed_nav_graph.xml
+++ b/app/src/main/res/navigation/inneed_nav_graph.xml
@@ -19,5 +19,13 @@
         android:id="@+id/createRequestFragment"
         android:name="com.example.pomocnysasiad.fragment.CreateRequestFragment"
         android:label="fragment_create_request"
-        tools:layout="@layout/fragment_create_request" />
+        tools:layout="@layout/fragment_create_request" >
+        <action
+            android:id="@+id/action_createRequestFragment_to_myRequestsFragment"
+            app:destination="@id/myRequestsFragment"
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/from_right"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/from_right" />
+    </fragment>
 </navigation>
