--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -7,6 +7,16 @@
     android:layout_height="match_parent"
     tools:context=".fragment.AccountFragment">
 
+    <TextView
+        android:id="@+id/accountUserName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/accountSignOutBT"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/accountSignOutBT"
         android:layout_width="wrap_content"
