--- a/app/src/main/res/navigation/inneed_nav_graph.xml
+++ b/app/src/main/res/navigation/inneed_nav_graph.xml
@@ -51,5 +51,18 @@
         android:id="@+id/chatFragment"
         android:name="com.example.pomocnysasiad.fragment.ChatFragment"
         android:label="fragment_chat"
-        tools:layout="@layout/fragment_chat" />
+        tools:layout="@layout/fragment_chat" >
+        <action
+            android:id="@+id/action_chatFragment_to_assessFragment"
+            app:destination="@id/assessFragment"
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/from_right"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/from_right" />
+    </fragment>
+    <fragment
+        android:id="@+id/assessFragment"
+        android:name="com.example.pomocnysasiad.fragment.AssessFragment"
+        android:label="fragment_assess"
+        tools:layout="@layout/fragment_assess" />
 </navigation>
