--- a/app/src/main/res/navigation/volunteer_nav_graph.xml
+++ b/app/src/main/res/navigation/volunteer_nav_graph.xml
@@ -66,5 +66,18 @@
         android:id="@+id/chatFragment2"
         android:name="com.example.pomocnysasiad.fragment.ChatFragment"
         android:label="fragment_chat"
-        tools:layout="@layout/fragment_chat" />
+        tools:layout="@layout/fragment_chat" >
+        <action
+            android:id="@+id/action_chatFragment2_to_assessFragment2"
+            app:destination="@id/assessFragment2"
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/from_right"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/from_right" />
+    </fragment>
+    <fragment
+        android:id="@+id/assessFragment2"
+        android:name="com.example.pomocnysasiad.fragment.AssessFragment"
+        android:label="fragment_assess"
+        tools:layout="@layout/fragment_assess" />
 </navigation>
