--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -4,36 +4,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.ChatFragment"
-    android:layout_marginBottom="?attr/actionBarSize">
+    android:layout_marginBottom="?attr/actionBarSize"
+    tools:context=".fragment.ChatFragment">
 
     <TextView
         android:id="@+id/chatUserName"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/hello_blank_fragment"
-
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toStartOf="@id/chatCheckAccount"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/chatRecycler"/>
+
+    <Button
+        android:id="@+id/chatCheckAccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/check_account"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/chatUserName"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/chatRecycler"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chatRecycler"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/chatNewMessageTIL"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/chatUserName"
-        app:layout_constraintBottom_toTopOf="@id/chatNewMessageTIL"
-        android:layout_width="match_parent"
-        android:layout_height="0dp" />
+        app:layout_constraintTop_toBottomOf="@id/chatCheckAccount" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/chatNewMessageTIL"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/chatSendMessage"
-        app:layout_constraintTop_toBottomOf="@id/chatRecycler"
-        app:layout_constraintBottom_toTopOf="@id/chatAccept"
         android:layout_width="0dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/chatAccept"
+        app:layout_constraintEnd_toStartOf="@id/chatSendMessage"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/chatRecycler">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/chatNewMessageChatET"
@@ -44,23 +55,23 @@
 
     <ImageButton
         android:id="@+id/chatSendMessage"
-        app:layout_constraintStart_toEndOf="@id/chatNewMessageTIL"
-        app:layout_constraintTop_toBottomOf="@id/chatRecycler"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/chatReject"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_menu_send" />
+        android:src="@android:drawable/ic_menu_send"
+        app:layout_constraintBottom_toTopOf="@id/chatReject"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/chatNewMessageTIL"
+        app:layout_constraintTop_toBottomOf="@id/chatRecycler" />
 
     <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/chatNewMessageTIL"
+        android:background="?android:attr/listDivider"
         app:layout_constraintBottom_toTopOf="@id/chatFinish"
-        android:background="?android:attr/listDivider" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/chatNewMessageTIL" />
 
     <Button
         android:id="@+id/chatAccept"
@@ -86,13 +97,13 @@
 
     <Button
         android:id="@+id/chatFinish"
-        app:layout_constraintTop_toBottomOf="@id/divider"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-android:visibility="gone"
-        android:text="@string/finish" />
+        android:text="@string/finish"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/divider" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
