--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -4,27 +4,25 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+  <group android:scaleX="0.31171137"
+      android:scaleY="0.31171137"
+      android:translateX="39.810757"
+      android:translateY="27">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M91,48.237c-0.98,-25.91 -19.12,-47.22 -45.03,-48.2 -28.5,-1.09 -45.97,21.93 -45.97,50.2v123c18.19,0 22,-16.81 22,-35v-42c0,-5.31 5.77,-1.94 11,-1a48.824,48.824 0,0 0,10 1C71.27,96.237 92.09,76.737 91,48.237ZM45,71.237a29,29 0,1 1,29 -29A28.995,28.995 0,0 1,45 71.237Z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startY="84.3149"
+            android:startX="21.0778"
+            android:endY="2.25766"
+            android:endX="77.00453"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFF94144"/>
+          <item android:offset="0.37914" android:color="#FFF65C37"/>
+          <item android:offset="0.71751" android:color="#FFF46C2F"/>
+          <item android:offset="0.97578" android:color="#FFF3722C"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+  </group>
 </vector>
