--- a/app/src/main/res/layout/activity_choose_role.xml
+++ b/app/src/main/res/layout/activity_choose_role.xml
@@ -4,15 +4,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/ic_bg">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:fontFamily="@font/montserrat_regular"
+        android:textColor="@color/white"
         android:text="@string/choose_role"
-        android:textSize="30sp"
+        android:textSize="48sp"
         app:layout_constraintBottom_toTopOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="250dp"
-        app:cardBackgroundColor="@color/gold"
+        app:cardBackgroundColor="@color/secondary"
         app:cardCornerRadius="10dp"
         app:contentPadding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,8 +42,9 @@
             android:layout_gravity="center"
             android:layout_marginHorizontal="40dp"
             android:background="#00FFFFFF"
+            android:fontFamily="@font/montserrat_light"
             android:text="@string/volunteer"
-            android:textSize="30sp" />
+            android:textSize="24sp" />
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
@@ -48,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="200dp"
-        app:cardBackgroundColor="@color/gold"
+        app:cardBackgroundColor="@color/secondary"
         app:cardCornerRadius="10dp"
         app:contentPadding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -64,7 +68,8 @@
             android:layout_gravity="center"
             android:layout_marginHorizontal="40dp"
             android:background="#00FFFFFF"
+            android:fontFamily="@font/montserrat_light"
             android:text="@string/inNeed"
-            android:textSize="30sp" />
+            android:textSize="24sp" />
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
