--- a/app/src/main/res/layout/activity_volunteer.xml
+++ b/app/src/main/res/layout/activity_volunteer.xml
@@ -27,6 +27,7 @@
         app:menu="@menu/volunteer_nav_menu"
         app:itemTextColor="@color/bottom_nav_color"
         app:itemIconTint="@color/bottom_nav_color"
-        android:background="@color/colorPrimary"
+        android:background="@color/primary"
+        android:theme="@style/BottomNav"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
