--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -1,87 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/selectCategoryBT"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginHorizontal="10dp">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="25dp"
-        app:cardPreventCornerOverlap="true"
-        app:cardBackgroundColor="#DDDDDD"
-        android:padding="0dp"
-        android:layout_margin="5dp"
-        app:cardElevation="0.7dp"
-        app:cardMaxElevation="1dp"
-        >
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:id="@+id/selectCategoryBT"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:cardCornerRadius="7dp"-->
+<!--        app:cardPreventCornerOverlap="true"-->
+<!--        app:cardBackgroundColor="#DDDDDD"-->
+<!--        android:padding="0dp"-->
+<!--        android:layout_margin="5dp"-->
+<!--        app:cardElevation="0.7dp"-->
+<!--        app:cardMaxElevation="1dp"-->
+<!--        ></androidx.cardview.widget.CardView>-->
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/categoryRowLinear"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:foregroundGravity="center"
-            android:layout_gravity="center"
-            >
-            <androidx.cardview.widget.CardView
-                android:id="@+id/categoryListRowImageCV"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/categoryListRowImage"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/categoryRowName"
-                app:cardCornerRadius="25dp"
-                app:cardPreventCornerOverlap="false"
-                android:padding="0dp"
-                android:layout_margin="2dp"
-                app:cardElevation="0.7dp"
-                app:cardMaxElevation="1dp"
-                >
+                android:layout_height="100dp"
+                android:adjustViewBounds="true"
+                android:cropToPadding="true"
 
-                <ImageView
-                    android:id="@+id/categoryListRowImage"
-                    android:layout_width="match_parent"
-                    android:layout_height="120dp"
-                    android:src="@drawable/shopping"
-                    android:adjustViewBounds="true"
-                    android:cropToPadding="true"
-                    android:scaleType="centerCrop"/>
-
-            </androidx.cardview.widget.CardView>
+                app:tint="@color/sDark" />
 
             <TextView
                 android:id="@+id/categoryRowName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:fontFamily="@font/courgette"
-
+                android:fontFamily="@font/montserrat_light"
                 android:gravity="center"
                 android:foregroundGravity="center_horizontal"
                 android:text="placeholder"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toTopOf="@id/selectCategoryBT"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/categoryListRowImageCV" />
+                android:textSize="18sp" />
 
-            <Button
-                android:id="@+id/selectCategoryBT"
-                style="@android:style/Widget.Material.Button.Colored"
-                android:layout_width="100dp"
-                android:layout_marginBottom="3dp"
-                android:layout_height="40dp"
-                android:foregroundGravity="center"
-                android:gravity="center"
-                android:text="@string/select"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/categoryRowName" />
+        </LinearLayout>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+<!--            <Button-->
+<!--                android:id="@+id/selectCategoryBT"-->
+<!--                style="@android:style/Widget.Material.Button.Colored"-->
+<!--                android:layout_width="100dp"-->
+<!--                android:layout_marginBottom="3dp"-->
+<!--                android:layout_height="40dp"-->
+<!--                android:foregroundGravity="center"-->
+<!--                android:gravity="center"-->
+<!--                android:text="@string/select"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/categoryRowName" />-->
+
 </LinearLayout>
