--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,130 +8,289 @@
     android:layout_height="match_parent"
     tools:context=".fragment.AccountFragment">
 
-    <TextView
-        android:id="@+id/accountUserName"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/accountUserNameLayout"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/accountSignOutBT"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="10dp"
+        app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center">
 
-    <Button
-        android:id="@+id/accountSignOutBT"
-        android:layout_width="wrap_content"
+        <ImageView
+            android:layout_width="125dp"
+            android:layout_height="125dp"
+            android:background="@drawable/ic_person_icon"
+            android:backgroundTint="@color/secondary"
+            />
+
+        <TextView
+            android:id="@+id/accountUserName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_bold"
+            android:textColor="@color/pDark"
+            android:text="TextView"
+            android:padding="10dp"
+            android:textSize="34sp" />
+
+        <Button
+            android:id="@+id/opinionBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:fontFamily="@font/montserrat_semibold"
+            android:textColor="@color/white"
+            android:text="Opinia o użytkowniku"
+            android:backgroundTint="@color/primary"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/tokensLayout"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="wyloguj sie"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/accountUserNameLayout"
+        android:gravity="center">
 
-    <Button
-        android:id="@+id/accountChooseRoleBT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="zmień rolę"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/accountSignOutBT" />
+        <TextView
+            android:id="@+id/accountUserTokens"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/secondary"
+            android:textSize="96sp"
+            android:layout_marginTop="-20dp"
+            android:layout_marginBottom="-20dp"
+            android:text="0" />
 
-    <EditText
-        android:id="@+id/accountCodeText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="kod"
-        app:layout_constraintBottom_toBottomOf="@+id/accountActivateCodeBtn"
-        app:layout_constraintEnd_toStartOf="@+id/accountActivateCodeBtn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/accountActivateCodeBtn" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10sp"
+            android:textColor="@color/pDark"
+            android:textSize="14sp"
+            android:fontFamily="@font/montserrat_regular"
+            android:text="ŻETONY"
+            />
 
-    <Button
-        android:id="@+id/accountActivateCodeBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="aktywuj kod"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/accountChooseRoleBT" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/accountCodeDisplay"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/accountControllersLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="codeDisplay"
-        android:textSize="30dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/accountCodeText"
-        app:layout_constraintTop_toBottomOf="@+id/accountActivateCodeBtn" />
+        app:layout_constraintTop_toBottomOf="@id/tokensLayout"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:padding="10dp">
 
-    <Button
-        android:id="@+id/accountDeleteCodeBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="usun kod"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/accountActivateCodeBtn"
-        app:layout_constraintStart_toStartOf="@+id/accountActivateCodeBtn"
-        app:layout_constraintTop_toBottomOf="@+id/accountActivateCodeBtn" />
 
-    <Button
-        android:id="@+id/accountCreateCodeBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="utwórz kod"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/accountActivateCodeBtn"
-        app:layout_constraintStart_toStartOf="@+id/accountActivateCodeBtn"
-        app:layout_constraintTop_toBottomOf="@+id/accountActivateCodeBtn" />
+            <Button
+                android:id="@+id/accountSignOutBT"
+                android:layout_width="0dp"
+                android:layout_weight="0.5"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_regular"
+                android:textColor="@color/white"
+                android:text="wyloguj się"
+                android:background="@color/secondary"
+                android:layout_marginRight="5dp"/>
 
-    <TextView
-        android:id="@+id/accountTokenCountDisplay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/accountCreateCodeBtn"
-        app:layout_constraintEnd_toStartOf="@+id/accountCreateCodeBtn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/accountCreateCodeBtn" />
+            <Button
+                android:id="@+id/accountChooseRoleBT"
+                android:layout_width="0dip"
+                android:layout_weight="0.5"
+                android:layout_height="wrap_content"
+                android:background="@color/secondary"
+                android:fontFamily="@font/montserrat_regular"
+                android:textColor="@color/white"
+                android:text="zmień rolę"
+                android:layout_marginLeft="5dp"/>
 
-    <ImageView
-        android:id="@+id/accountAddTockenBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:src="@drawable/add"
-        app:layout_constraintBottom_toBottomOf="@+id/accountTokenCountDisplay"
-        app:layout_constraintStart_toEndOf="@+id/accountTokenCountDisplay"
-        app:layout_constraintTop_toTopOf="@+id/accountTokenCountDisplay" />
+    </LinearLayout>
 
-    <ImageView
-        android:id="@+id/accountReduceTockenBtn"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/inputCodeLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:src="@drawable/reduce"
-        app:layout_constraintBottom_toBottomOf="@+id/accountTokenCountDisplay"
-        app:layout_constraintEnd_toStartOf="@+id/accountTokenCountDisplay"
-        app:layout_constraintTop_toTopOf="@+id/accountTokenCountDisplay" />
+        android:orientation="vertical"
+        android:padding="10dp"
+        app:layout_constraintTop_toBottomOf="@id/accountControllersLayout">
 
-    <TextView
-        android:id="@+id/accountUserTokens"
-        android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:text="Wprowadznie kodu"
+            android:fontFamily="@font/montserrat_light"
+            android:textColor="@color/pLight"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp">
+
+            <EditText
+                android:id="@+id/accountCodeText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_weight="0.6"
+                android:backgroundTint="@color/sDark"
+                android:fontFamily="@font/montserrat_regular"
+                android:hint="Kod"
+                android:inputType="textPersonName"
+                android:textColor="@color/sDark"
+                android:textColorHint="@color/sLight"
+                android:textColorLink="@color/sLight" />
+
+            <Button
+                android:id="@+id/accountActivateCodeBtn"
+                android:layout_width="0dp"
+                android:layout_weight="0.4"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_regular"
+                android:textColor="@color/white"
+                android:text="aktywuj kod"
+                android:layout_marginLeft="5dp"
+                android:background="@color/pDark" />
+
+        </LinearLayout>
+
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/codeDisplayDeleteLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="@+id/accountUserName"
-        app:layout_constraintStart_toStartOf="@+id/accountUserName"
-        app:layout_constraintTop_toBottomOf="@+id/accountUserName" />
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/inputCodeLayout" >
+
+        <TextView
+            android:id="@+id/accountCodeDisplay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="codeDisplay"
+            android:textSize="30dp"
+            android:visibility="gone"  />
+
+        <Button
+            android:id="@+id/accountDeleteCodeBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="usun kod"
+            android:visibility="gone" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/createCodeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/codeDisplayDeleteLayout"
+        android:padding="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_light"
+            android:textColor="@color/pLight"
+            android:textSize="14sp"
+            android:text="Tworzenie kodu" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="0.6"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:gravity="center">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="0.3"
+                    android:layout_height="wrap_content"
+                    android:gravity="right">
+
+                    <ImageView
+                        android:id="@+id/accountReduceTockenBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/reduce"
+                        app:tint="@color/pLight"
+                        android:layout_gravity="center"/>
+
+                </LinearLayout>
+
+
+                <TextView
+                    android:id="@+id/accountTokenCountDisplay"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/sDark"
+                    android:text="1"
+                    android:textSize="30sp"
+                    android:textAlignment="center"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"/>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="0.3"
+                    android:layout_height="wrap_content"
+                    android:gravity="left">
+
+                    <ImageView
+                        android:id="@+id/accountAddTockenBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/add"
+                        app:tint="@color/sLight" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/accountCreateCodeBtn"
+                android:layout_width="0dp"
+                android:layout_weight="0.4"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_regular"
+                android:backgroundTint="@color/pDark"
+                android:textColor="@color/white"
+                android:text="utwórz kod"
+                android:layout_marginLeft="5dp"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+<!--    app:layout_constraintBottom_toBottomOf="@+id/accountActivateCodeBtn"-->
+<!--    app:layout_constraintEnd_toStartOf="@+id/accountActivateCodeBtn"-->
+<!--    app:layout_constraintStart_toStartOf="parent"-->
+<!--    app:layout_constraintTop_toTopOf="@+id/accountActivateCodeBtn"-->
