--- a/app/src/main/res/layout/product_row.xml
+++ b/app/src/main/res/layout/product_row.xml
@@ -19,7 +19,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/productAmount"
         android:drawableStart="@drawable/point"
-        android:fontFamily="@font/lobster"
+        android:fontFamily="@font/montserrat_semibold"
         android:imeOptions="actionNext"/>
 
     <EditText
@@ -34,7 +34,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/productUnit"
         app:layout_constraintStart_toEndOf="@id/productName"
-        android:fontFamily="@font/lobster"
+        android:fontFamily="@font/montserrat_semibold"
         android:imeOptions="actionDone"
         />
 
@@ -44,7 +44,8 @@
         android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:textSize="14sp"
+        android:textSize="16sp"
+        android:theme="@style/SpinnerTheme"
         app:layout_constraintStart_toEndOf="@id/productAmount"
         app:layout_constraintEnd_toStartOf="@id/productBT"
         />
@@ -55,6 +56,7 @@
         android:layout_height="match_parent"
         app:srcCompat="@drawable/ic_baseline_delete_forever_24"
         android:background="#00000000"
+        android:tint="@color/secondary"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
