--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorWhite">#FFFFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="transparent">#00000000</color>
     <color name="background">#f4f9e9</color>
-    <color name="colorPrimary">#670391</color>
-    <color name="colorPrimaryDark">#0947E8</color>
-    <color name="colorAccent">#00A5FF</color>
-    <color name="purple">#670391</color>
-    <color name="gold">#e3ab05</color>
-    <color name="blue">#159ac2</color>
-
+    <color name="primary">#F3722C</color>
+    <color name="pLight">#ffa35a</color>
+    <color name="pDark">#ba4300</color>
+    <color name="secondary">#3D0B37</color>
+    <color name="sLight">#693661</color>
+    <color name="sDark">#1d0012</color>
 
     <!--colors for modern ui-->
     <color name="whiteTextColor">#fff</color>
