--- a/app/src/main/res/layout/chat_row_others_message.xml
+++ b/app/src/main/res/layout/chat_row_others_message.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/chatOthersMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorWhite"
+                android:textColor="@color/white"
                 android:maxEms="15"
                 android:textSize="16sp"
                 />
